--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tic-Tac-Toe</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Permanent+Marker"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <h1 class="header">Tic Tac Toe</h1>
+        <div class="message header"></div>
+      </div>
+      <div class="details">
+        <label for="player1">Player 1</label>
+        <input
+          type="text"
+          name="player1"
+          placeholder="enter name for player 1"
+          id="player1"
+        />
+        <br />
+        <label for="player2">Player 2</label>
+        <input
+          type="text"
+          name="player2"
+          placeholder="enter name for player 2"
+          id="player2"
+        />
+        <br />
+        <button type="submit" id="submit">Start Game</button>
+      </div>
+      <div class="game"></div>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
