--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
       </div>
       <div class="game"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="App.js"></script>
   </body>
 </html>
